--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    Product List
+    {{pageTitle}}
   </div> <!-- end of card header-->
   <div class='card-body'>
     <div class='row'>
