--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -16,11 +16,11 @@
     </div>
   </div> <!-- end of card body -->
   <div class='table-responsive'>
-    <table class='table'>
+    <table class='table' *ngIf='products && products.length'>
       <thead>
         <tr>
           <th>
-            <button class='btn btn-primary'>
+            <button class='btn btn-primary' (click)='toggleImage()'>
               Show Image
             </button>
           </th>
@@ -32,7 +32,18 @@
         </tr>
       </thead>
       <tbody>
-
+        <tr *ngFor='let p of products'>
+          <td>
+            <!-- <img src={{p.imageUrl}} title={{p.productName}}> -->
+            <img *ngIf='showImage' [src]='p.imageUrl' [title]='p.productName' [style.width.px]='imageWidth'
+              [style.margin.px]='imageMargin'>
+          </td>
+          <td>{{p.productName}}</td>
+          <td>{{p.productCode}}</td>
+          <td>{{p.releaseDate}}</td>
+          <td>{{p.price}}</td>
+          <td>{{p.starRating}}</td>
+        </tr>
       </tbody>
     </table>
   </div> <!-- end of table -->
