--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class='row'>
       <div class='col-md-6'>
-        <h4>Filtered by: </h4>
+        <h4>Filtered by: {{listFilter}}</h4>
       </div>
     </div>
   </div> <!-- end of card body -->
@@ -35,7 +35,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor='let p of products'>
+        <tr *ngFor='let p of filteredProducts'>
           <td>
             <!-- <img src={{p.imageUrl}} title={{p.productName}}> -->
             <img *ngIf='showImage'
