--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -50,7 +50,10 @@
           <td>{{p.productCode | uppercase | convertToSpace :'-'}}</td>
           <td>{{p.releaseDate}}</td>
           <td>{{p.price | currency : 'EUR' : true  }}</td>
-          <td>{{p.starRating}}</td>
+          <td>
+            <pm-stars [rating]='p.starRating'></pm-stars>
+          </td>
+          <!-- <td>{{p.starRating}}</td> -->
         </tr>
       </tbody>
     </table>
