--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -46,7 +46,7 @@
                  [style.width.px]='imageWidth'
                  [style.margin.px]='imageMargin'>
           </td>
-          <td>{{p.productName}}</td>
+          <td><a [routerLink]="['/products', p.productId]">{{p.productName}}</a></td>
           <td>{{p.productCode | uppercase | convertToSpace :'-' }}</td>
           <td>{{p.releaseDate}}</td>
           <td>{{p.price | currency : 'EUR' : true  }}</td>
